# switchboard

./: .editorconfig  .eslintignore  .eslintrc.json  .gitignore  .gitmodules  404.html  CNAME  My_Test_Feed.json  README.md  TODO.md  about.html  api.html  aptos.html  aptos.js.html  arbitrum.html  architecture.html  async.html  attestation-program.html  blog.html  buffer-relayer.html  chat.html  cli.html  common-networks.html  common-protos.html  common.html  community.html  coredao.html  crank.html  dao.html  data-feed-best-practices.html  data-feeds.html  data-models.html  data.html  dev.html  developers.html  docs.html  evm.html  evm.js.html  explorer.html  faq.html  (+57 more)
about/: architecture.html  network.html  security.html
api/: aptos.html  aptos.js.html  cli.html  common-networks.html  common-protos.html  common.html  evm.js.html  near.html  near.js.html  next.html  oracle.html  python-overview.html  rust-overview.html  solana.html  solana.js.html  sui.js.html  tasks.html  typescript-overview.html
aptos/: dev.html  feeds.html  idl.html  javascript.html  localnet.html  move.html  troubleshooting.html
arch/: acess-control.html  feeds.html  queues.html  randomness.html
architecture/: data-feed-service.html  function-service.html  randomness-service.html
attestation-program/: test.html
blog/: archive.html  atom.xml  rss.xml  tags.html
cli/: .eslintrc  .gitignore  Dockerfile  README.md  README.template.md  evm.sh  my_jobs.json  my_updated_jobs.json  oracle.html  package.json  sol_updates.sh  solana.html  testing_sumthing.json  tsconfig.json
contracts/: .gitignore
coredao/: dev.html
dev/: aptos.html  cli.html  common.html  near.html  oracle.html  solana.html
developers/: buffer-relayer.html  feed.html  localnet.html  oracle.html  queue.html  randomness.html
docker/: Dockerfile.sgx-function
docs/: README.md  docusaurus.config.js  next.html  package.json  tsconfig.json
evm/: ILegacyOracle.html  ISwitchboard.html  arbitrum.html  contract.html  coredao.html  dev.html  functions.html  javascript.html  sb-push-prac;e.html  troubleshooting.html
feed/: directory.html  operator.html  publisher.html
feeds/: about.html  aptos.html  best-practices.html  cost.html  history.html  maintenance.html  near.html  private-apis.html  publisher.html  solana.html  task-runner.html  tasks.html  updates.html
guides/: network.html
idl/: accounts.html  errors.html  events.html  instructions.html  types.html
info/: basic-oracle-function.html  more-tee-sgx.html  randomness-callback-function.html  test-integration.html
infra/: function-manager.html  nodejs-oracle.html  quote-verification-oracle.html  secrets-server.html  troubleshooting.html
learn/: faq.html  feeds.html  oracles.html  queues.html  randomness.html  security.html
near/: dev.html  feed-parser.html  feeds.html  idl.html  javascript.html  rust.html  troubleshooting.html
next/: aptos.js.html  common-networks.html  common-protos.html  common.html  evm.js.html  oracle.html  solana.js.html  sui.js.html
node-operator/: deployment.html  getting-started.html  other-commands.html  overview.html
operator/: about.html  crank.html  oracle.html  queue.html
oracle/: config.html  docker.html  gcp.html  monitoring.html  operator.html  oracle1.html
oracle-program/: test.html
oracles/: aptos.html  config.html  docker.html  gcp.html  monitoring.html  near.html  solana.html
program/: accounts.html  events.html  instructions.html  types.html
protos/: AddTask.html  AftermathTask.html  AnchorFetchTask.html  BitFluxTask.html  BoundTask.html  BufferLayoutParseTask.html  CacheTask.html  ComparisonTask.html  ConditionalTask.html  CorexTask.html  CronParseTask.html  CurveFinanceTask.html  DefiKingdomsTask.html  DivideTask.html  EtherfuseTask.html  EwmaTask.html  ExponentPTLinearPricingTask.html  ExponentTask.html  FragmetricTask.html  GlyphTask.html  HistoryFunctionTask.html  HttpTask.html  JsonParseTask.html  JupiterSwapTask.html  LendingRateTask.html  LlmTask.html  LpExchangeRateTask.html  LpTokenPriceTask.html  LstHistoricalYieldTask.html  MangoPerpMarketTask.html  MapleFinanceTask.html  MarinadeStateTask.html  MaxTask.html  MeanTask.html  MedianTask.html  MeteoraSwapTask.html  MinTask.html  MultiplyTask.html  OndoUsdyTask.html  OracleJob.html  (+31 more)
publisher/: connect-wallet.html  create-feed.html  my-feeds.html
queue/: private-queues.html
randomness/: about.html  solana.html
rust/common/: Cargo.toml  README.md  package.json
rust/common/src/: error.rs  lib.rs
rust/common/src/sgx/: mod.rs
rust/switchboard-common/: Cargo.toml  README.md  package.json
rust/switchboard-common/src/: error.rs  function_error.rs  function_result.rs  gramine.rs  ipfs.rs  lib.rs  macros.rs  utils.rs
rust/switchboard-common/src/env/: evm.rs  function_manager.rs  mod.rs  qvn.rs  solana.rs
rust/switchboard-common/src/sgx/: mod.rs
rust/switchboard-common/src/solana/: mod.rs
rust/switchboard-utils/: Cargo.toml  README.md  build.rs  package.json
rust/switchboard-utils/src/: amm.rs  lib.rs  protobufs.rs  runner.rs  utils.rs
rust/switchboard-utils/src/amm/: mod.rs  uniswap.rs
rust/switchboard-utils/src/exchanges/: binance.rs  bitfinex.rs  coinbase.rs  huobi.rs  kraken.rs  mod.rs
rust/switchboard-utils/src/measure_latency/: mod.rs
rust/switchboard-utils/src/task/: http.rs  json.rs  jupiter_swap.rs  mod.rs  websocket.rs
rust/utils/: Cargo.toml  README.md  package.json
rust/utils/src/: error.rs  lib.rs
rust/utils/src/solana/: event_listener.rs
rust/utils/src/task/: http.rs  json.rs  mod.rs  websocket1.rs
scripts/: README.md  aptos.sh  move-cjs-to-dist.ts  near.sh  publish_docker_sgx_base.sh  solana.sh  uprev-sdks.sh
solana/: advanced-walkthrough.html  api.html  buffer-relayers.html  dev.html  feed-integration.html  feeds.html  functions.html  idl.html  javascript.html  priority-fees.html  program-addresses.html  program.html  queues.html  quick-start.html  randomness.html  rust.html  switchboard-v2.html  test-integration.html  troubleshooting.html  vrf-integration.html  vrf.html
starknet/: dev.html
sui/: dev.html  (+3 more)
(+18111 files in other folders)
