[package]
name = "switchboard-common"
version = "0.0.1"
edition = "2021"
description = "Common Switchboard types and utilities"
readme = "README.md"
keywords = ["switchboard", "oracle", "solana", "solidity"]
homepage = "https://docs.switchboard.xyz"
repository = "https://github.com/switchboard-xyz/sgx-sdk/tree/main/rust/common"
license = "MIT"
documentation = "https://docs.rs/switchboard-common/"

[features]
default = []
sgx = ["dep:getrandom", "dep:sgx-quote"]

[dependencies]
sha2 = "0.10.6"
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
sgx-quote = { version = "0.1.0", optional = true }
getrandom = { version = "0.2.8", optional = true }
reqwest = { version = "0.11" }
