[package]
name = "switchboard-common"
version = "0.6.2"
edition = "2021"
description = "Common Switchboard types and utilities"
readme = "README.md"
keywords = ["switchboard", "oracle", "solana", "solidity"]
homepage = "https://switchboard.xyz"
repository = "https://github.com/switchboard-xyz/sbv2-core/tree/main/rust/switchboard-common"
license = "MIT"

[features]
default = []
client = ["getrandom", "sgx-quote", "reqwest"]

[dependencies]
sha2 = "0.10.6"
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
sgx-quote = { version = "0.1.0", optional = true }
getrandom = { version = "0.2.8", optional = true }
reqwest = { version = "0.11", optional = true }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "doc_cfg"]
