[package]
name = "switchboard-common"
version = "0.11.0"
edition = "2021"
description = "Common Switchboard types and utilities"
readme = "README.md"
keywords = ["switchboard", "oracle", "solana", "solidity"]
homepage = "https://switchboard.xyz"
repository = "https://github.com/switchboard-xyz/sbv2-core/tree/main/rust/switchboard-common"
license = "MIT"

[features]
default = []
client = ["async-trait", "envy", "futures", "getrandom", "sgx-quote"]
ipfs = ["ipfs-api-backend-hyper", "ipfs-api-prelude"]
all = ["client", "ipfs"]

[dependencies]
base64 = "0.21.5"
hex = { version = "0.4.3", features = ["serde"] }
log = "0.4.20"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
sha2 = "0.10.6"
sha3 = "0.10.8"

async-trait = { version = "0.1", optional = true }
envy = { version = "0.4", optional = true }
futures = { version = "0.3", optional = true }
getrandom = { version = "0.2.8", optional = true }
ipfs-api-backend-hyper = { version = "0.6", optional = true, features = [
    "with-builder",
] }
ipfs-api-prelude = { version = "0.6", optional = true }
sgx-quote = { version = "0.1.0", optional = true }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "doc_cfg"]
features = ["client"]

[dev-dependencies]
pretty_assertions = "1.4.0"
rand = "0.8.5"
simple_logger = "4.2"
