[package]
name = "switchboard-utils"
version = "0.6.1"
edition = "2021"
include = ["src/**/*", "Cargo.toml", "../../protos/job_schemas.proto"]
description = "Switchboard utilities for custom functions and OracleJob protobuf definitions"
readme = "README.md"
homepage = "https://switchboard.xyz"
repository = "https://github.com/switchboard-xyz/sbv2-core/tree/main/rust/switchboard-utils"
license = "MIT"

[features]
default = []

[dependencies]
switchboard-common = { version = "0.6.1", path = "../switchboard-common", features = [
    "client"
] }
prost = "0.11.9"
bytes = "1.4.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
jsonpath-rust = "0.3.0"
# tungstenite = "0.19"
# tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
url = "2.3.1"
futures-util = "0.3.28"
futures-channel = "0.3"
# actix-web = "4.3.1"
# actix-web-actors = "4.2.0"
# actix-rt = "2.8.0"
# actix = "0.13.0"
bytestring = "1.3.0"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_derive = "^1"

[dev-dependencies]
mockito = "^1.0.2"

[build-dependencies]
prost-build = { version = "0.11.9", features = ["cleanup-markdown"] }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "doc_cfg"]
