[package]
name = "switchboard-utils"
version = "0.9.0"
edition = "2021"
description = "Switchboard utilities for custom functions and OracleJob protobuf definitions"
readme = "README.md"
homepage = "https://switchboard.xyz"
repository = "https://github.com/switchboard-xyz/switchboard/tree/main/rust/switchboard-utils"
license = "MIT"

[features]
default = []

[dependencies]
bytes = "1.4.0"
bytestring = "1.3.0"
chrono = { version = "0.4.31", features = ["serde"] }
# ethers = { version = "^2", features = ["legacy", "rustls"] }
futures-channel = "0.3"
futures-util = "0.3.28"
jsonpath-rust = "0.3.0"
prost = "0.12"
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = { version = "^1", features = ["maths", "serde"] }
serde = { version = "^1", features = ["derive"] }
serde_derive = "^1"
serde_json = "^1"
switchboard-common = { version = "0.11.0", path = "../switchboard-common", features = [
    "client",
] }
tokio = { version = "1", features = ["full"] }
url = "2.3.1"

[dev-dependencies]
mockito = "^1.0.2"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "doc_cfg"]
