[package]
name = "switchboard-utils"
version = "0.9.2"
edition = "2021"
description = "Switchboard utilities for custom functions and OracleJob protobuf definitions"
readme = "README.md"
homepage = "https://switchboard.xyz"
repository = "https://github.com/switchboard-xyz/switchboard/tree/main/rust/switchboard-utils"
license = "MIT"

[features]
no-entrypoint = []
program = []
default = []
client = []
test = []
devnet = []
localnet = []

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
futures-util = "0.3.28"
jsonpath-rust = "0.3.0"
prost = "0.12"
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = { version = "^1", features = ["maths", "serde"] }
serde = { version = "^1", features = ["derive"] }
switchboard-common = { version = "0.11.0", path = "../switchboard-common", features = ["client"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
mockito = "^1.0.2"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "doc_cfg"]
