[package]
name = "switchboard-utils"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
solana = ["solana-program", "anchor-lang"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
jsonpath-rust = "0.3.0"
serde_json = "1.0.96"
tungstenite = "0.19"
tokio-tungstenite = {version="0.18", features = ["native-tls"]}
url = "2.3.1"
futures-util = "0.3.28"
futures-channel = "0.3"

# Optional dependencies
solana-program = { version = ">= 1.13.5, < 1.15", optional = true }
anchor-lang = { version = "0.26.0", optional = true }
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
actix-rt = "2.8.0"
actix = "0.13.0"
bytestring = "1.3.0"
serde_derive = "1.0.163"
serde = "1.0.163"

[dev-dependencies]
mockito = "^1.0.2"
